# vibewarz

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  package-lock.json  pyproject.toml
.changeset/: add-vibelords-renderer.md  blast-aspect-ratios.md  blast-play-board-fix.md  brand-mark-left-icon.md  curve-aspect-ratios.md  poker-aspect-ratios.md  poker-turn-timer.md  poker-win-animation.md  vibelords-melee-strike-accents.md
.github/workflows/: ci.yml  release.yml
docs/: PROTOCOL.md  QUICKSTART.md  WRITING_A_GAME.md
docs/games/: blast.md  curve.md  poker.md  vibelords.md
games/: README.md  pyproject.toml
games/src/vibewarz_games/: __init__.py
games/src/vibewarz_games/_core/: __init__.py  base.py  registry.py
games/src/vibewarz_games/blast/: __init__.py  board.py  bombs.py  game.py
games/src/vibewarz_games/chinese_poker/: __init__.py  game.py
games/tests/: test_blast.py  test_blast_board.py  test_blast_bombs.py  test_chinese_poker.py  test_curve.py  test_curve_invariants.py  test_poker.py  test_vibelords.py
games/tests/fixtures/: curve_m_17eb7f9d_tick449.json
sample-bots/: README.md  blast_random.py  chinese_poker_human.py  chinese_poker_random.py  curve_wall_avoid.py  poker_random.py  vibelords_counter.py  vibelords_random.py
sdk-python/: README.md  pyproject.toml
sdk-python/src/vibewarz/: __init__.py  bot.py  cli.py  client.py  helpers.py  play_local.py  play_ui.py  replay_server.py  runner.py
sdk-python/tests/: test_replay.py
viewer/: CHANGELOG.md  package.json
viewer/src/: live.tsx  main.tsx
(+19 files in other folders)
